--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "3.2",
+        "filament/widgets": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/locales": "^2.5",
         "laravel/framework": "^10.10",
